X11: Reset dispatching event when nested message loop ends

BUG=672763

Review-Url: https://codereview.chromium.org/2568233003
Cr-Commit-Position: refs/heads/master@{#438203}

Former-commit-id: 12871d4be95f2ed2899c35a10332618034ad78d2